# docs/swagger.yaml
@@ -223,6 +223,15 @@ definitions:
     - data
     - msg
     type: object
+  controller.CategoryInfo:
+    properties:
+      category:
+        description: 分类名称
+        type: string
+      count:
+        description: 分类数量
+        type: integer
+    type: object
   controller.CreateVolunteerReq:
     properties:
       age:
@@ -475,6 +484,11 @@ definitions:
       avg_borrow_duration:
         description: 平均借阅时长（单位天）
         type: number
+      category_infos:
+        description: 书籍分类信息
+        items:
+          $ref: '#/definitions/controller.CategoryInfo'
+        type: array
       hot_book:
         description: 热门书籍
         type: string
